[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/Player/PlayerShipNormal.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Images/Lights/LightDifuse.png" type="Texture" id=3]
[ext_resource path="res://Images/Player/PlayerShip.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Player/LineTrail.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 375, 375 )

[node name="KinematicBody2D" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 4 )
normal_map = ExtResource( 1 )

[node name="MovementArea2D" type="Area2D" parent="."]
monitorable = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementArea2D"]
modulate = Color( 1, 0, 1, 0.411765 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.3
color = Color( 0, 0.717647, 1, 1 )
energy = 1.5
range_z_max = 0

[node name="LineTrails" type="Node2D" parent="."]

[node name="LineTrail" parent="LineTrails" instance=ExtResource( 5 )]
position = Vector2( 27.2236, 25.4559 )
MAX_POINTS = 7
